force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <description>Execution log for PDF generation. Records previewed or saved PDF documents.</description>
    <label>Document</label>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>