force-app/main/default/objects/Document__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error message if the document generation failed.</description>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>