force-app/main/default/objects/Document__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <description>The Id of the record that this document was generated for.</description>
    <label>Target Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>