force-app/main/default/objects/Document__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The template used to generate this document.</description>
    <label>Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>